k8s/apps/authentik/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  labels:
    app: authentik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - auth.int.jigga.xyz
    secretName: authentik-tls
  rules:
  - host: auth.int.jigga.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              number: 80
